# release-repository

./: .catalog-info.yaml  Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml  lints.yml  tests.yml
src/: id.rs  lib.rs  storage.rs
tests/: contract.rs  utils.rs
