[package]
name = "aurora-release-repository"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
blake2 = "0.10.6"
borsh = "0.9.3"
hex = "0.4.3"
near-sdk = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wee_alloc = { version = "0.4.5", default-features = false }

[dev-dependencies]
anyhow = "1.0"
near-sdk = "4.1"
near-primitives = "0.17.0"
near-units = "0.2.0"
near-contract-standards = "4.1"
tokio = { version = "1.28", features = ["full"] }
workspaces = "0.7.0"
