[package]
name = "aurora-release-repository"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
near-sdk = "4.1"
hex = "0.4.3"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
workspaces = { git = "https://github.com/near/workspaces-rs.git", rev = "8d93197" }
