[package]
name = "aurora-release-repository"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
# Due to a strange bug, setting this to 3 will cause test failures
opt-level = "z"
debug = false
debug-assertions = true
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
hex = "0.4.3"
near-sdk = "4.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
wee_alloc = { version = "0.4.5", default-features = false }

[dev-dependencies]
anyhow = "1"
near-primitives = "0.17"
near-contract-standards = "4.1"
tokio = { version = "1.28", features = ["macros"] }
near-workspaces = "0.9"
